fixed temperature issue

--- a/package.json
+++ b/package.json
@@ -21,6 +21,18 @@
     "@parcel/validator-typescript": "^2.8.2",
     "@types/cors": "^2.8.13",
     "@types/node": "^18.11.17",
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "eslint": "^8.31.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-standard-with-typescript": "^26.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-n": "^15.6.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "nodemon": "^2.0.20",
     "sass": "^1.57.1",
     "ts-node": "^10.9.1",
